# mini-graph-rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/api/: models.py  routes.py  schemas.py
app/core/: config.py  kuzu.py  tracing.py
app/graph/: read.py  repo.py  schema.py  search.py  seed.py  semantic.py
tests/: conftest.py  test_indexes.py  test_smoke.py
